@@ -15,6 +15,7 @@ repositories {
 
 test {
     useJUnitPlatform()
+//    jvmArgs '--enable-preview'
 }
 
 // https://docs.gradle.org/current/userguide/jacoco_plugin.html
@@ -29,8 +30,6 @@ jacocoTestReport {
 
 
 dependencies {
-//    testCompile 'junit:junit:4.12'
-
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/com.h2database/h2
     testCompile group: 'com.h2database', name: 'h2', version: '1.3.176'
@@ -38,8 +37,6 @@ dependencies {
 
     // https://mincong.io/2020/04/19/mockito-junit5/
     testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.28.2'
-//    testCompile 'org.junit.vintage:junit-platform-engine:5.1.0'
-//    testCompile 'org.mockito:mockito-junit-jupiter:2.17.2'  //mockito-core is implicitly added
 
     /*  Jersey for the service
     We use the latest 2.x release because 2.x releases implement JAX-RS 2.1 API.
@@ -84,5 +81,10 @@ dependencies {
 
     compile 'com.h2database:h2:1.3.176'
     runtime 'com.h2database:h2:1.3.176'
+
+// https://mvnrepository.com/artifact/org.glassfish.jersey.test-framework.providers/jersey-test-framework-provider-grizzly2
+    testCompile group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-grizzly2', version: '2.32'
+//    testImplementation 'io.rest-assured:rest-assured:4.3.2'
+//    compile group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-grizzly2', version: '2.32'
 
 }
